added lesson material for 'this' keyword lesson

--- a/index.html
+++ b/index.html
@@ -9,18 +9,44 @@
 </head>
 <body>
     <div class="container">
-        <div class="class">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                In fuga natus eligendi voluptatibus tempore blanditiis, porro, eaque molestiae, necessitatibus itaque quo. 
-                Dolorem, qui! Recusandae quisquam aperiam laboriosam iste neque ipsam!</p>
+        <div class="card">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quasi numquam minima ut, voluptatibus illo deleniti? Aspernatur error nam maiores assumenda et quam laudantium. Accusantium molestias nulla beatae est. Nihil aliquid minus voluptate sed optio consequuntur officiis commodi maiores, et ipsum ratione magni quam fugiat ut! Quas tempore reprehenderit corrupti ex. Id sunt asperiores expedita, ipsum est voluptatibus provident error deleniti aliquid itaque inventore harum sequi corrupti nulla dolore sapiente ipsam consequuntur unde ex. Eveniet explicabo cumque voluptatibus, animi maiores ullam modi eum dolore accusantium commodi excepturi, non voluptatum iste, aliquid iusto dolorum. Nulla quos commodi rem libero aliquid ut accusamus eum voluptatibus iure, minima nemo earum temporibus nisi provident deleniti quas quibusdam molestias praesentium necessitatibus natus? Sapiente veniam quia repudiandae? Recusandae maxime vitae molestiae illum. Aspernatur beatae, ad dolorem ut culpa debitis fugit ipsum provident quibusdam cumque quos pariatur iste obcaecati at voluptas asperiores, maiores accusantium esse maxime repellendus.</p>
         </div>
-        <div class="class">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                In fuga natus eligendi voluptatibus tempore blanditiis, porro, eaque molestiae, necessitatibus itaque quo. 
-                Dolorem, qui! Recusandae quisquam aperiam laboriosam iste neque ipsam!</p>
+        <div class="card">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non quisquam optio ipsa. Possimus qui culpa, velit sint molestias explicabo consectetur? Impedit cum, illo maxime ipsum at aperiam optio ducimus. Corporis, sed labore. Sapiente neque sint sit aliquam, eos tempora accusantium et omnis ad impedit perferendis, perspiciatis non molestias quam nesciunt corrupti assumenda error? Dolore aspernatur eaque minima distinctio, illo similique veritatis in recusandae amet, nobis vero? Eos delectus sit natus nulla deserunt odit dolore corrupti pariatur impedit debitis esse voluptatum corporis enim placeat similique praesentium reiciendis est, totam ab maiores quisquam dolores ipsa magni. Voluptas dolor cumque odit culpa illo labore pariatur asperiores itaque totam aliquid temporibus exercitationem eveniet iusto quae delectus, quasi ex sunt ipsa saepe repudiandae, suscipit perspiciatis! Repudiandae excepturi velit nihil et mollitia, beatae quasi ut, perspiciatis deleniti, iure voluptatum explicabo quibusdam minima maxime porro suscipit nisi debitis in dolor ipsa eveniet ipsum. Iusto laudantium quisquam ipsa!</p>
         </div>
     </div>
-    <script type="text/javascript" src="./js/script.js"
+    <div class="container">
+        <div class="card">
+            <button>Button One</button>
+        </div>
+        <div class="card">
+            <button>Button Two</button>
+        </div>
+    </div>
+    <div class="container">
+        <div class="box one">
+        </div>
+        <div class="box three">
+        </div>
+        <div class="box one">
+        </div>
+
+        <div class="box two">
+        </div>
+        <div class="box one">
+        </div>
+        <div class="box two">
+        </div>
+
+        <div class="box three">
+        </div>
+        <div class="box three">
+        </div>
+        <div class="box two">
+        </div>
+    </div>
+    <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
 
